fix: z-index err

--- a/packages/theme/src/components/_image.scss
+++ b/packages/theme/src/components/_image.scss
@@ -13,7 +13,6 @@
       height: 100%;
       opacity: 0;
       transition: all 0.3s;
-      z-index: 9999;
 
       &:hover {
         opacity: 1;
